Fix overflowing status-panel-containers

--- a/app/assets/stylesheets/components/_status_panel.scss
+++ b/app/assets/stylesheets/components/_status_panel.scss
@@ -1,5 +1,5 @@
 .status-bar-container {
-  width: calc(100vw);
+  width: 100%;
   margin-left: calc(-1 * ((100vw - 100%) / 2));
 
   &--colored {
